--- a/README.rdoc
+++ b/README.rdoc
@@ -17,4 +17,9 @@ Add the following line to your <tt>~/.riplrc</tt>
 The plugin rewrites the last line (if the there are closing elements). If this is too buggy for you or your terminal does not support it, you can deactivate it with <tt>Ripl.config[:auto_indent_rewrite] = false</tt>.
 You can change the default two spaces used for indention (per level) with <tt>Ripl.config[:auto_indent_space]</tt>.
 
+== Known bugs
+
+* Statement modifiers (if at the end of the line) get displayed incorrectly
+* Long lines might cause wrong rewriting (if activated)
+
 J-_-L
