--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+== 0.2.0
+* Refactor out get_indent into ruby_indentation gem. Compatible with newer coderay versions
+
 == 0.1.4
 * Compatible with multi_line 0.2.3 (proc as prompt)
 
